examples/test/testpolicy13584.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13584
  namespace: namespace360
spec:
  podSelector:
    matchLabels:
      key48: value6
      key14: value45
      key24: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value18
          key4: value25
      podSelector:
        matchLabels:
          key49: value6
          key11: value21
          key16: value42
